bot/test_output_axe7.txt
cargo :    Compiling hft_bot 
v0.1.0 (C:\Users\jules\Docume
nts\bot4\bot)
Au caractère Ligne:1 : 1
+ cargo test 2>&1 | Out-File 
-FilePath C:\Users\jules\Docu
ments\bot4\bo ...
+ ~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling hf...ments\bot4\bo   
 t):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`super::*`
   --> 
src\core\channels.rs:103:9
    |
103 |     use super::*;
    |         ^^^^^^^^
    |
    = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`Orderbook`
    --> 
src\core\execution.rs:1014:47
     |
1014 |     use crate::adapter
s::types::{OrderStatus, 
Orderbook};
     |                       
                        
^^^^^^^^^

warning: unused import: 
`AtomicU64`
    --> 
src\core\execution.rs:1015:29
     |
1015 |     use std::sync::ato
mic::{AtomicU64, Ordering};
     |                       
      ^^^^^^^^^

warning: unused import: 
`std::sync::Arc`
    --> 
src\core\execution.rs:1016:9
     |
1016 |     use 
std::sync::Arc;
     |         ^^^^^^^^^^^^^^

error[E0308]: mismatched 
types
   --> 
src\core\runtime.rs:624:17
    |
623 |             
exit_monitoring_loop(
    |             
-------------------- 
arguments to this function 
are incorrect
624 |                 
&executor,
    |                 
^^^^^^^^^ types differ in 
mutability
    |
    = note: expected mutable 
reference `&mut execution::De
ltaNeutralExecutor<_, _>`
                       found 
reference `&execution::DeltaN
eutralExecutor<TestMockAdapte
r, TestMockAdapter>`
note: function defined here
   --> 
src\core\runtime.rs:76:10
    |
 76 | async fn 
exit_monitoring_loop<V, P>(
    |          
^^^^^^^^^^^^^^^^^^^^
 77 |     executor: &mut 
DeltaNeutralExecutor<V, P>,
    |     -------------------
----------------------

error[E0308]: mismatched 
types
   --> 
src\core\runtime.rs:677:17
    |
676 |             
exit_monitoring_loop(
    |             
-------------------- 
arguments to this function 
are incorrect
677 |                 
&executor,
    |                 
^^^^^^^^^ types differ in 
mutability
    |
    = note: expected mutable 
reference `&mut execution::De
ltaNeutralExecutor<_, _>`
                       found 
reference `&execution::DeltaN
eutralExecutor<TestMockAdapte
r, TestMockAdapter>`
note: function defined here
   --> 
src\core\runtime.rs:76:10
    |
 76 | async fn 
exit_monitoring_loop<V, P>(
    |          
^^^^^^^^^^^^^^^^^^^^
 77 |     executor: &mut 
DeltaNeutralExecutor<V, P>,
    |     -------------------
----------------------

error[E0308]: mismatched 
types
   --> 
src\core\runtime.rs:738:17
    |
737 |             
exit_monitoring_loop(
    |             
-------------------- 
arguments to this function 
are incorrect
738 |                 
&executor,
    |                 
^^^^^^^^^ types differ in 
mutability
    |
    = note: expected mutable 
reference `&mut execution::De
ltaNeutralExecutor<_, _>`
                       found 
reference `&execution::DeltaN
eutralExecutor<TestMockAdapte
r, TestMockAdapter>`
note: function defined here
   --> 
src\core\runtime.rs:76:10
    |
 76 | async fn 
exit_monitoring_loop<V, P>(
    |          
^^^^^^^^^^^^^^^^^^^^
 77 |     executor: &mut 
DeltaNeutralExecutor<V, P>,
    |     -------------------
----------------------

error[E0308]: mismatched 
types
   --> 
src\core\runtime.rs:906:17
    |
905 |             
exit_monitoring_loop(
    |             
-------------------- 
arguments to this function 
are incorrect
906 |                 
&executor,
    |                 
^^^^^^^^^ types differ in 
mutability
    |
    = note: expected mutable 
reference `&mut execution::De
ltaNeutralExecutor<_, _>`
                       found 
reference `&execution::DeltaN
eutralExecutor<TestMockAdapte
r, TestMockAdapter>`
note: function defined here
   --> 
src\core\runtime.rs:76:10
    |
 76 | async fn 
exit_monitoring_loop<V, P>(
    |          
^^^^^^^^^^^^^^^^^^^^
 77 |     executor: &mut 
DeltaNeutralExecutor<V, P>,
    |     -------------------
----------------------

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1103:22
     |
1103 |         let result = e
xecutor.execute_delta_neutral
(opportunity).await.unwrap();
     |                      
^^^^^^^^ cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1094 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1129:22
     |
1129 |         let result = e
xecutor.execute_delta_neutral
(opportunity).await.unwrap();
     |                      
^^^^^^^^ cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1120 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1155:22
     |
1155 |         let result = e
xecutor.execute_delta_neutral
(opportunity).await.unwrap();
     |                      
^^^^^^^^ cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1146 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1191:22
     |
1191 |         let result = e
xecutor.execute_delta_neutral
(opportunity).await.unwrap();
     |                      
^^^^^^^^ cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1170 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1224:22
     |
1224 |         let result = e
xecutor.execute_delta_neutral
(opportunity).await.unwrap();
     |                      
^^^^^^^^ cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1203 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1260:22
     |
1260 |         let result = e
xecutor.execute_delta_neutral
(opportunity).await.unwrap();
     |                      
^^^^^^^^ cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1251 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1390:13
     |
1390 |         let executor 
= DeltaNeutralExecutor::new(
     |             ^^^^^^^^ 
not mutable
...
1400 |         let result1 = 
executor.execute_delta_neutra
l(opp1).await;
     |                       
-------- cannot borrow as 
mutable
...
1405 |         let result2 = 
executor.execute_delta_neutra
l(opp2).await;
     |                       
-------- cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1390 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1429:22
     |
1429 |         let result = e
xecutor.execute_delta_neutral
(opportunity).await.unwrap();
     |                      
^^^^^^^^ cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1420 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
    --> 
src\core\execution.rs:1488:13
     |
1488 |         let executor 
= DeltaNeutralExecutor::new(
     |             ^^^^^^^^ 
not mutable
...
1498 |         let _ = execut
or.execute_delta_neutral(opp)
.await;
     |                 
-------- cannot borrow as 
mutable
...
1515 |         let result = e
xecutor.execute_delta_neutral
(opp2).await;
     |                      
-------- cannot borrow as 
mutable
     |
help: consider changing this 
to be mutable
     |
1488 |         let mut 
executor = 
DeltaNeutralExecutor::new(
     |             +++

Some errors have detailed 
explanations: E0308, E0596.
For more information about 
an error, try `rustc 
--explain E0308`.
warning: `hft_bot` (lib 
test) generated 4 warnings
error: could not compile 
`hft_bot` (lib test) due to 
13 previous errors; 4 
warnings emitted
warning: build failed, 
waiting for other jobs to 
finish...
